--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,19 +26,23 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
+    needs: build
    
    
     strategy:
       matrix:
         node-version: [10.x, 12.x]
         os: [ubuntu-latest, windows-2016]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@master
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
-      with:
+      with: 
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
       run: |
