--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy": ">=1.18.1",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "standard": "^14.3.1",
     "webpack": "^4.28.4",
