--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
       - name: npm install and build webpack
         run: |
           npm install 
+          npm update
           npm run build
       - uses: actions/upload-artifact@master
         with:
