--- a/.github/workflows/giphy-generator.yml
+++ b/.github/workflows/giphy-generator.yml
@@ -1,23 +1,24 @@
-name: Giphy generator
-
 on:
   issues:
     types: [opened, edited]
-  pull_requests:
+  pull_request:
     types: [opened, edited]
   issue_comment:
     types: [created, edited]
-  
-jobs: 
-  giphy_generator:
+
+name: GIPHY Generator
+
+jobs:
+  giphy-generator:
+    name: GIPHY Generator
     runs-on: ubuntu-latest
-    
     steps:
-    - name: GIPHY Generator
-      uses: IAmHughes/giphy-generator@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }}
-      with:
-        rating: 'g'
-        lang: 'en'
+      - name: GIPHY Generator
+        id: giphy_generator
+        uses: iamhughes/giphy-generator@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }} # This token should be created on giphy.com: https://developers.giphy.com/dashboard/?create=true
+        with:
+          rating: 'g'
+          lang: 'en'
